--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "plugins/generic/defaultTranslation"]
 	path = plugins/generic/defaultTranslation
 	url = https://github.com/UB-Heidelberg/defaultTranslation.git
+[submodule "plugins/generic/vgWort"]
+	path = plugins/generic/vgWort
+	url = https://github.com/kadowa/omp-vgwort-plugin.git
